# cosc456-cg

./: index.html  index.php  readme.md
finalp/: index.php
finalp/js/: demo.js  glUtils.js
finalp/toji-gl-matrix/src/: mat4.js
finalp/webgl-obj-loader/development/: app.js
finalp/webgl-obj-loader/src/: material.ts  utils.ts
lab0/: CMakeLists.txt  cube.off  hello.cpp  jmesh.cpp  jmesh.h  main.cpp  offreader.cpp  offreader.h  solarSystem.cpp  test.cpp  utils.cpp  utils.h
lab2/: index.html  lab2_webgl.tgz
lab2/R5ANNYbb/lab2/Step2/: test.html
lab2/Step2/: index.php
lab2/Step2/js/: demo.js  glUtils.js  meshLoader.js
lab2/Step3/: index.php
lab2/Step3/js/: demo.js  glUtils.js
lab2/Step4/: index.php
lab2/Step4/js/: demo.js  glUtils.js  main.js  math.js
lab2/Step5/: index.php
lab2/Step5/js/: demo.js  glUtils.js
lab2/graphics/: index.php
lab2/graphics/js/: demo.js  meshLoader.js
lab2/template/graphics/js/: meshLoader.js
lab2/tp_01_modified/graphics/: index.php
lab2/tp_01_modified/graphics/js/: .demo.js.swp  demo.js  glUtils.js  main.js  meshLoader.js
lab3/Step1/: index.php
lab3/Step1/js/: demo.js  glUtils.js  main.js
lab3/Step2/: index.php
lab3/Step2/js/: demo.js  glUtils.js  matrix.js  meshLoader.js
lab3/Step2/webgl-obj-loader/: README.md
lab3/Step3/: examp.js  index.php
lab3/Step3/js/: .glUtils.js.swp  main.js  sizeof.js
lab3/Step3/webgl-obj-loader-gh-pages/: helpers.js  webgl-obj-loader.js
lab3/Step4/: index.php
lab3/Step4/js/: data  demo.js  jquery-ui.js
lab3/Step4/webgl-obj-loader-gh-pages/: gl-matrix.js
(+6 files in other folders)
